# Quile

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
docs/: skicl_anchestors.txt
examples/: cross_synth.tcl  overview.tcl  reconstruction.tcl
src/: BPF.h  CMakeLists.txt  TwoPoles.h  bootstrap.tcl  core.h  core.tcl  numeric.h  quile.cpp  quile.h  skicl.cpp  skicl.h  stdlib.tcl  system.h  test.tcl
tests/: core_tests.tcl  proc_nesting_test.tcl  scope_tests.tcl
work/: omni.txt  skicl_lastest_before_github.cpp  skicl_with_strings.cpp
work/miniaudio/: mixer.c  test_audio.c
work/my_code/: BlockVocoder.h  algorithms.h  nn_example1.cpp_  nn_example2.cpp_  numeric.h  svg.h
